[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player/Orima.gd" type="Script" id=1]
[ext_resource path="res://Player/mario_big.png" type="Texture" id=2]
[ext_resource path="res://Player/States/Move.gd" type="Script" id=3]
[ext_resource path="res://Libraries/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Player/States/Walk.gd" type="Script" id=5]
[ext_resource path="res://Player/States/Jump.gd" type="Script" id=6]
[ext_resource path="res://Player/States/Run.gd" type="Script" id=7]
[ext_resource path="res://Player/States/Fall.gd" type="Script" id=8]
[ext_resource path="res://Player/States/Idle.gd" type="Script" id=9]
[ext_resource path="res://Player/States/Powerups.gd" type="Script" id=10]
[ext_resource path="res://Player/States/Normal.gd" type="Script" id=11]
[ext_resource path="res://Player/States/Mushroom.gd" type="Script" id=12]
[ext_resource path="res://Player/States/FireFlower.gd" type="Script" id=13]
[ext_resource path="res://Player/mario.png" type="Texture" id=14]
[ext_resource path="res://Player/mario_fire_big.png" type="Texture" id=15]

[sub_resource type="Animation" id=1]
resource_name = "FireFlower"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 256 )

[node name="Orima" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="PowerupStateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Powerups/Normal")

[node name="Powerups" type="Node" parent="PowerupStateMachine"]
script = ExtResource( 10 )

[node name="Normal" type="Node" parent="PowerupStateMachine/Powerups"]
script = ExtResource( 11 )
collision_node = NodePath("../../../NormalCollision")

[node name="Mushroom" type="Node" parent="PowerupStateMachine/Powerups"]
script = ExtResource( 12 )
collision_node = NodePath("../../../BigCollision")

[node name="FireFlower" type="Node" parent="PowerupStateMachine/Powerups"]
script = ExtResource( 13 )
collision_node = NodePath("../../../BigCollision")

[node name="MovementStateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="MovementStateMachine"]
script = ExtResource( 3 )

[node name="Walk" type="Node" parent="MovementStateMachine/Move"]
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="MovementStateMachine/Move"]
script = ExtResource( 9 )

[node name="Run" type="Node" parent="MovementStateMachine/Move"]
script = ExtResource( 7 )

[node name="Jump" type="Node" parent="MovementStateMachine/Move"]
script = ExtResource( 6 )

[node name="Fall" type="Node" parent="MovementStateMachine/Move"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="NormalCollision" type="CollisionPolygon2D" parent="." groups=[
"collisions",
]]
polygon = PoolVector2Array( -7, 8, 7, 8, 2, -8, -2, -8 )

[node name="BigCollision" type="CollisionPolygon2D" parent="." groups=[
"collisions",
]]
polygon = PoolVector2Array( -7, 8, 7, 8, 2, -24, -2, -24 )
disabled = true

[node name="RunCollision" type="CollisionPolygon2D" parent="." groups=[
"collisions",
]]
polygon = PoolVector2Array( -8, 8, 8, 8, 2, -8, -2, -8 )
disabled = true

[node name="BigRunCollision" type="CollisionPolygon2D" parent="." groups=[
"collisions",
]]
polygon = PoolVector2Array( -8, 8, 8, 8, 2, -24, -2, -24 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FireFlower = SubResource( 1 )
anims/Mushroom = SubResource( 2 )
anims/Normal = SubResource( 3 )

[node name="MovementStateLabel" type="RichTextLabel" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBarrier" type="StaticBody2D" parent="."]
position = Vector2( -64, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftBarrier"]
shape = SubResource( 4 )
